# regulation_advisor_v2

./: README.md  pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/about/: page.tsx
src/: report.md
src/regulation_advisor_v2/: api.py  crew.py  main.py  report.md
src/regulation_advisor_v2/config/: agents.yaml  tasks.yaml
src/regulation_advisor_v2/knowledge/: S893.txt  legislation.csv
tests/: test_response.json
web/: next.config.ts  package-lock.json  package.json
web/app/: page.tsx
